--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <!-- TODO: Удалить -->
     <!-- https://github.com/VMarf/layout-designer-project-lvl2 -->
     <!-- https://www.figma.com/file/b6AjhwQsQeSeoIteenOTIp/Hexlet-LayoutDesigner-Project.-Music-Box?node-id=0%3A1 -->
+    <!-- sass /Users/Vladislav/Documents/Projects/local/layout-designer-project-lvl2/src/scss/app.scss /Users/Vladislav/Documents/Projects/local/layout-designer-project-lvl2/src/css/app.css -->
     <!-- TODO: https://ru.hexlet.io/projects/56/members/17541?step=2 -->
 </body>
 </html>
