--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,81 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <!-- TODO: Удалить -->
+    <!-- TODO Удалить -->
     <!-- https://github.com/VMarf/layout-designer-project-lvl2 -->
     <!-- https://www.figma.com/file/b6AjhwQsQeSeoIteenOTIp/Hexlet-LayoutDesigner-Project.-Music-Box?node-id=0%3A1 -->
     <!-- sass /Users/Vladislav/Documents/Projects/local/layout-designer-project-lvl2/src/scss/app.scss /Users/Vladislav/Documents/Projects/local/layout-designer-project-lvl2/src/css/app.css -->
-    <!-- TODO: https://ru.hexlet.io/projects/56/members/17541?step=2 -->
+    <!-- https://jakearchibald.github.io/svgomg/ -->
+    <!-- TODO Step 3 -->
+    <!-- TODO Step 4 -->
+    <!-- TODO Step 5 -->
+    <!-- TODO Step 6 -->
+    <!-- TODO Step 7 -->
+    <!-- TODO Step 8 -->
+    <!-- TODO Step 9 -->
+    <!-- TODO Step 10 -->
+    <!-- TODO Проверка -->
+    <header class="page-header">
+        <div class="page-header__container">
+            <div class="page-header__inner">
+                <!-- TODO На странице с артистами добавь ссылку на главную -->
+                <a class="logo page-header__logo">
+                    <svg class="logo__svg" width="24" height="24" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                        <g transform="translate(2 2)" stroke="#1565C0" stroke-width="3.5" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                          <circle fill="#E2F3FB" cx="50" cy="50" r="50"/>
+                          <path fill="#FFF" d="M70.966 19.242v15.247L34.99 40.511V25.289z"/>
+                          <ellipse fill="#FFF" cx="63.471" cy="66.44" rx="7.495" ry="5.93"/>
+                          <ellipse fill="#FFF" cx="27.495" cy="72.37" rx="7.495" ry="5.93"/>
+                          <path d="M34.99 40.643V72.37M70.966 35.011v31.434" fill="#E2F3FB"/>
+                        </g>
+                    </svg>
+                    <span class="logo__text">Music Box</span>
+                </a>
+                <nav class="page-header__nav">
+                    <ul class="page-header__nav-list">
+                        <li class="page-header__nav-item">
+                            <a class="page-header__nav-item-link">Главная</a>
+                        </li>
+                        <li class="page-header__nav-item">
+                            <a class="page-header__nav-item-link" href="#">Каталог</a>
+                        </li>
+                        <li class="page-header__nav-item">
+                            <a class="page-header__nav-item-link" href="#">Исполнители</a>
+                        </li>
+                        <li class="page-header__nav-item">
+                            <a class="page-header__nav-item-link" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="page-header__search">
+                    <form action="">
+                        <input class="page-header__search-input" type="search" id="page-header__search-input" placeholder="Поиск...">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="page-main">
+        <section class="page-description" id="page-description">
+            <div class="page-description__container">
+                <h1 class="page-description__title">Онлайн музыка где угодно</h1>
+                <h2 class="page-description__subtitle">Без ограничений</h2>
+                <p class="page-description__text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
+                <form action="">
+                    <div class="page-description__form-wrapper">
+                        <input class="page-description__name-input" type="text" id="page-description__name-input" placeholder="Имя">
+                        <input class="page-description__email-input" type="email" id="page-description__email-input" placeholder="Email">
+                        <button class="button button--page-description page-description__button" type="submit">Получить доступ</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <section class="subscription">
+            <div class="subscription__container"></div>
+        </section>
+    </main>
+    <footer class="page-footer">
+        <div class="page-footer__container"></div>
+    </footer>
 </body>
 </html>
