--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     <h1 class="page-description__title">Онлайн музыка где угодно</h1>
                     <h2 class="page-description__subtitle">Без ограничений</h2>
                     <p class="page-description__text">Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
-                    <form action="">
+                    <form class="page-description__form" action="">
                         <div class="page-description__form-wrapper">
                             <input class="page-description__name-input" type="text" id="page-description__name-input" placeholder="Имя">
                             <input class="page-description__email-input" type="email" id="page-description__email-input" placeholder="Email">
